[package]
name = "quicc-module"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
hex = "0.4.3"
quinn = "0.11.9"
rcgen = "0.14.5"
rustls = { version = "0.23.35", default-features = false, features = ["std"] }
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
